# MandarinMCP

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  load_vocabulary.py  pyproject.toml
data/: hsk_vocabulary.json
src/mandarin_mcp_server/: __init__.py  database.py  server.py  testing.py  vocabulary.py
tests/: test_database.py  test_server.py  test_testing.py  test_vocabulary.py
